2006-03-06  cut-sea  <cut-sea@ipadev>
	
	* add excerpt ajax link.
	which excerpt song and into song which prefix ">".
	
2006-02-23  cut-sea  <cut-sea@ipadev>

	* add error-proc and display default error page.

	* add error-log-write.
	
2006-02-10  cut-sea  <cut-sea@ipadev>

	* add slot of musumes into <unit> class.
	
	* change melody-list's second argument(musume-id) to musume-no.
	
2006-01-08  cut-sea  <cut-sea@ipadev>

	* kagoiri-musume/msgs/ja/kagoiri-musume.po: fix messages.

	* kagoiri-musume/msgs/ja/kagoiri-musume.po: a bit touch message.

	* kagoiri-musume/msgs/ja/kagoiri-musume.po, kagoiri-musume/search.kahua:
	po file message modify.

	* kagoiri-musume/gadget.kahua: modify kana trans.

	* kagoiri-musume/gadget.kahua: a bit touch for kana-trans logic.

2006-01-07  cut-sea  <cut-sea@ipadev>

	* kagoiri-musume/gadget.kahua: a bit touch.

	* kagoiri-musume/gadget.kahua: modify kana transform function.

	* kagoiri-musume/class.kahua, kagoiri-musume/debug-support.kahua, kagoiri-musume/gadget.kahua, kagoiri-musume/kagoiri-musume.kahua, kagoiri-musume/page.kahua, kagoiri-musume/parts-collection.kahua, kagoiri-musume/search.kahua, kagoiri-musume/sys-admin.kahua, kagoiri-musume/user-setting.kahua, kagoiri-musume/util.kahua, kagoiri-musume/version.kahua.in:
	mode change as mode: scheme -> mode: kahua

	* kagoiri-musume/kagoiri-musume.css, kagoiri-musume/parts-collection.kahua, test/test4.scm:
	change design of clickable.

2006-01-07  shibata  <shibata@ipadev>

	* kagoiri-musume/gadget.kahua: Added "kagikaggo" "tyuten".

	* kagoiri-musume/gadget.kahua: Added "ten" "maru".

2006-01-07  cut-sea  <cut-sea@ipadev>

	* DIST_EXCLUDE_X, kagoiri-musume/kagoiri-musume.kahua, kagoiri-musume/parts-collection.kahua:
	a bit touch for a link design.

	* kagoiri-musume/msgs/ja/kagoiri-musume.po: copy message.

2006-01-07  shibata  <shibata@ipadev>

	* kagoiri-musume/msgs/ja/kagoiri-musume.po: msg file

2006-01-07  cut-sea  <cut-sea@ipadev>
