@@ -1,3 +1,7 @@
+2006-05-12  ENDO Yasuyuki  <yasuyuki@javaopen.org>
+
+	* kagoiri-musume/javascripts/kagoiri-musume.js (init): check navi is null for IE's prototype.js error.
+
 2006-03-06  cut-sea  <cut-sea@ipadev>
 	
 	* add excerpt ajax link.
